# br-masters

./: .env.example  .gitignore  CLAUDE.md  QA_REPORT.md  README.md  ai-system-bootstrap.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts
backend/: .dockerignore  .env.example  Dockerfile  RAILWAY.md  README.md  celery_app.py  pyproject.toml
backend/.mypy_cache/3.14/: _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _ctypes.data.json  _ctypes.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _interpqueues.data.json  _interpqueues.meta.json  _interpreters.data.json  _interpreters.meta.json  _io.data.json  _io.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _sitebuiltins.data.json  _sitebuiltins.meta.json  _stat.data.json  _stat.meta.json  _struct.data.json  _struct.meta.json  _warnings.data.json  _warnings.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  (+84 more)
backend/apps/authentication/: authentication.py  serializers.py  services.py  urls.py  views.py
backend/br_masters_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/config/: urls.py
backend/scripts/: entrypoint.sh  prestart.sh
backend/tests/: test_auth.py  test_health.py  test_settings.py
(+382 files in other folders)
